sendmessage swagger
